--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
       <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-38Y0MWT1Z1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-38Y0MWT1Z1');
+  </script>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
